Fix usage of deprecated primitive boxed types constructors
Signed-off-by: Gabriel Roldan <gabriel.roldan@gmail.com>