@@ -328,9 +328,9 @@ public class ResetOpTest extends RepositoryTestCase {
 
     @Test
     public void testResetFixesConflict() throws Exception {
-        Feature points1Modified = feature(pointsType, idP1, "StringProp1_2", new Integer(1000),
+        Feature points1Modified = feature(pointsType, idP1, "StringProp1_2", Integer.valueOf(1000),
                 "POINT(1 1)");
-        Feature points1ModifiedB = feature(pointsType, idP1, "StringProp1_3", new Integer(2000),
+        Feature points1ModifiedB = feature(pointsType, idP1, "StringProp1_3", Integer.valueOf(2000),
                 "POINT(1 1)");
         insertAndAdd(points1);
         RevCommit resetCommit = repo.command(CommitOp.class).call();
@@ -366,9 +366,9 @@ public class ResetOpTest extends RepositoryTestCase {
 
     @Test
     public void testResetPathFixesConflict() throws Exception {
-        Feature points1Modified = feature(pointsType, idP1, "StringProp1_2", new Integer(1000),
+        Feature points1Modified = feature(pointsType, idP1, "StringProp1_2", Integer.valueOf(1000),
                 "POINT(1 1)");
-        Feature points1ModifiedB = feature(pointsType, idP1, "StringProp1_3", new Integer(2000),
+        Feature points1ModifiedB = feature(pointsType, idP1, "StringProp1_3", Integer.valueOf(2000),
                 "POINT(1 1)");
         insertAndAdd(points1);
         RevCommit resetCommit = repo.command(CommitOp.class).call();
@@ -398,9 +398,9 @@ public class ResetOpTest extends RepositoryTestCase {
 
     @Test
     public void testResetPathToHeadVersionFixesConflict() throws Exception {
-        Feature points1Modified = feature(pointsType, idP1, "StringProp1_2", new Integer(1000),
+        Feature points1Modified = feature(pointsType, idP1, "StringProp1_2", Integer.valueOf(1000),
                 "POINT(1 1)");
-        Feature points1ModifiedB = feature(pointsType, idP1, "StringProp1_3", new Integer(2000),
+        Feature points1ModifiedB = feature(pointsType, idP1, "StringProp1_3", Integer.valueOf(2000),
                 "POINT(1 1)");
         insertAndAdd(points1);
         repo.command(CommitOp.class).call();
